k8s/base-http/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: oam-loxilb
  labels:
    app: oam-loxilb
    version: v0.9.8.7
