k8s/base-http/oam-loxilb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oam-loxilb-service
  namespace: oam-loxilb
  labels:
    app: oam-loxilb
    component: application
    protocol: http
spec:
  selector:
    app: oam-loxilb
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  type: ClusterIP
